--- a/test-gitops-automatic/service.yaml
+++ b/test-gitops-automatic/service.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: apache-service
   namespace: test-gitops-automatic
 spec:
   selector:
-    app: nginx
+    app: apache
   ports:
     - protocol: TCP
-      port: 80 # <-- The service will still be accessed on port 80
-      targetPort: 8080 # <-- The service will now forward traffic to port 8080 on the pods
+      port: 80
+      targetPort: 8080
   type: ClusterIP
