--- a/test-gitops-automatic/deployment.yaml
+++ b/test-gitops-automatic/deployment.yaml
@@ -21,3 +21,7 @@ spec:
         image: registry.access.redhat.com/ubi8/httpd-24
         ports:
         - containerPort: 8080
+        resources:  # <-- Add this resources block
+          requests:
+            memory: "1024Mi"
+            cpu: "2000m"
